# cpp-dp-2020-10-26

./: README.md
Behavioral.Patterns/Chain.TheoryCode/: CMakeLists.txt  chain.hpp  main.cpp
Behavioral.Patterns/Command.Exercise/: CMakeLists.txt  main.cpp
Behavioral.Patterns/Command.Exercise/di/: di.hpp
Behavioral.Patterns/Command.Exercise/src/: application.hpp  clipboard.hpp  command.hpp  console.hpp  document.hpp
Behavioral.Patterns/Command.Exercise/tests/: application_tests.cpp  command_tests.cpp  document_tests.cpp
Behavioral.Patterns/Command.Exercise/tests/mocks/: mock_clipboard.hpp  mock_command.hpp  mock_console.hpp
Behavioral.Patterns/Mediator/: Mediator.pro  main.cpp  mydialog.cpp  mydialog.h  mydialog.hpp  mydialog.ui  quickentrymediator.cpp  quickentrymediator.hpp  ui_mydialog.h
Behavioral.Patterns/Mediator.TheoryCode/: main.cpp  mediator.hpp
Behavioral.Patterns/Observer.Exercise/: CMakeLists.txt  main.cpp  stock.hpp
Behavioral.Patterns/State.Example/: CMakeLists.txt  main.cpp
Behavioral.Patterns/State.Exercise/: CMakeLists.txt  main.cpp
Behavioral.Patterns/State.TheoryCode/: CMakeLists.txt  main.cpp  state.hpp
Behavioral.Patterns/Strategy.Exercise/: CMakeLists.txt  main.cpp
Behavioral.Patterns/Strategy.TheoryCode/: main.cpp  strategy.hpp
Behavioral.Patterns/TemplateMethod.TheoryCode/: main.cpp  template_method.hpp
Behavioral.Patterns/Turnstile.SML/: turnstile_sml.cpp
Behavioral.Patterns/Visitor.Exercise/: CMakeLists.txt  main.cpp
Creational.Patterns/AbstractFactory.Example/: enemy_factory.hpp  game.hpp  main.cpp  monsters.hpp
Creational.Patterns/AbstractFactory.Exercise/: CMakeLists.txt  before.cpp
Creational.Patterns/AbstractFactory.TheoryCode/: abstract_factory.hpp  main.cpp
Creational.Patterns/Builder.Example/: CMakeLists.txt  data.txt  main.cpp  report_builder.cpp  report_builder.hpp
Creational.Patterns/Builder.TheoryCode/: builder.hpp  main.cpp
Creational.Patterns/FactoryMethod.Example/: drawing.txt  main.cpp  point.hpp  rectangle.cpp  rectangle.hpp  shape.hpp  square.cpp  square.hpp
Creational.Patterns/FactoryMethod.Exercise1/: before.cpp  employee.cpp  employee.hpp  hrinfo.cpp  hrinfo.hpp
Creational.Patterns/FactoryMethod.Exercise2/: CMakeLists.txt  circle.cpp  circle.hpp  drawing.txt  generic_factory.hpp  main.cpp  rectangle.cpp  shape_factories.hpp  singleton.hpp  square.cpp  square.hpp
Creational.Patterns/FactoryMethod.TheoryCode/: factory.hpp  main.cpp
Creational.Patterns/Prototype.Exercise/: circle.cpp  circle.hpp  main.cpp  rectangle.hpp  shape.hpp  singleton.hpp  square.hpp
Creational.Patterns/Prototype.Intro/: main.cpp
Creational.Patterns/Prototype.TheoryCode/: main.cpp  prototype.hpp
Creational.Patterns/Singleton.Example/: devices.hpp  main.cpp  meyers_singleton.hpp  multithreading_singleton.hpp  phoenix_singleton.hpp  simple_singleton.hpp  singleton_holder.hpp
Creational.Patterns/Singleton.TheoryCode/: CMakeLists.txt  main.cpp  singleton.hpp
Extra/PolymorphicWrappers/: polymorphic_wrappers.cpp
Structural.Patterns/Adapter.Exercise/: circle.cpp  circle.hpp  drawing.txt  generic_factory.hpp  paragraph.hpp  point.cpp  rectangle.hpp  shape.hpp  shape_factories.hpp  square.hpp  text.cpp  text.hpp
Structural.Patterns/Adapter.TheoryCode/: CMakeLists.txt  adapter.hpp  main.cpp
Structural.Patterns/Bridge.Pimpl/: bitmap.cpp  bitmap.hpp  main.cpp
Structural.Patterns/Bridge.TheoryCode/: bridge.hpp  main.cpp
Structural.Patterns/Composite.Exercise/: CMakeLists.txt  circle.cpp  circle.hpp  drawing.txt  (+12 more)
_project-template/: CMakeLists.txt  tests.cpp
(+75 files in other folders)
